<resources>
    <string name="app_name">GupYou</string>

    <string name="menu_profile">Perfil</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_settings">Preferencias</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="login_sub_title">Dime tu red social; y te diré tus pecados.</string>

    <string name="social_instagram">Instagram</string>
    <string name="social_facebook">Facebook</string>
    <string name="social_linkedin">Linkedin</string>
    <string name="social_twitter">Twitter</string>
    <string name="social_snapchat">SnapChat</string>
    <string name="social_twitch">Twitch</string>
    <string name="social_tiktok">TikTok</string>
    <string name="social_tinder">Tinder</string>
    <string name="social_youtube">YouTube</string>
    <string name="ver_Perfil">ver Perfil</string>
    <string name="todo">TODO</string>
    <string name="imgFoto">imgFoto</string>
    <string name="txt_comentarios"/>
    <string name="txt_valoraciones"/>
    <string name="txtView_Valoraciones">Valoraciones</string>

    <string name="txtView_Comentartios">Comentarios</string>
    <string name="txt_descrip_comentarios" />
    <string name="txt_descrip_valoraciones" />

</resources>
